# quadcube

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
tests/: test_pix2vec.py
