[package]
name = "quadcube"
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/Cosmoglobe/zodipy"
description = "Python bindings for `pix2vec` for converting between quadcube res15 pixel number to ecliptic unit vectors."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quadcube"
crate-type = ["cdylib"]

[dependencies]
cached = "0.42.0"
numpy = "0.18.0"
pyo3 = "0.18.1"
