[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "quadcube"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy"]

[project.optional-dependencies]
test = [
  "pytest",
  "black",
  "isort",
]

[tool.maturin]
features = ["pyo3/extension-module"]
